# flask_app_db

./: .flaskenv  Dockerfile  README.md  app.py  config.py  database-test.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tox.ini
app/: __init__.py
app/forms/: __init__.py  todo.py  user.py
app/models/: __init__.py  post.py  todo.py  user.py
app/static/: prettier.config.js
app/templates/: base.html  create-user.html  header.html  index.html  login.html  todo-list.html
app/views/: __init__.py  auth.py  email.py  home.py  todo.py  user.py
migrations/versions/: 40d234f26e8f_todo_table_was_added.py  5bf4b308bd1e_relation_user_todos_was_added.py  69b99b105748_email_was_deleted_in_user.py  70390b0c8092_is_active_column_was_added_to_user.py  80da875eee87_initial_migration.py  a45dbafd4392_password_was_added_to_user.py  c7b3499de3aa_relation_between_todo_and_user_was_added.py  f2b6f2d7b92c_initial_migration.py  f2d986c7de82_was_deleted_email_from_user.py
static/: package-lock.json  package.json
static/css/: main.css
templates/: base.html  create-user.html  header.html  home-page.html  login.html
tests/: conftest.py  test_auth.py  test_user.py  utils.py
